[gd_scene load_steps=12 format=2]

[ext_resource path="res://data/sprites/human3.png" type="Texture" id=1]
[ext_resource path="res://data/sprites/human5.png" type="Texture" id=2]
[ext_resource path="res://data/sprites/human4.png" type="Texture" id=3]
[ext_resource path="res://data/sprites/human2.png" type="Texture" id=4]
[ext_resource path="res://data/sprites/human1.png" type="Texture" id=5]
[ext_resource path="res://scenes/Human.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=2]
radius = 8.0

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "surprised",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "walk",
"speed": 4.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 4.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 14, 6 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 14, 6 )

[node name="Human" type="KinematicBody2D" groups=["humans"]]
collision_layer = 0
script = ExtResource( 6 )

[node name="TerrainCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -7 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="HumanCollision" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HumanCollision"]
position = Vector2( 0, -4 )
shape = SubResource( 3 )

[node name="SecondTimer" type="Timer" parent="."]
autostart = true

[node name="SightLeftCollision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightLeftCollision"]
position = Vector2( -14, -6 )
shape = SubResource( 4 )

[node name="SightRightCollision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightRightCollision"]
position = Vector2( 14, -6 )
shape = SubResource( 5 )
disabled = true
